@@ -1,3 +1,8 @@
+2003-07-01  Earnie Boyd  <earnie@users.sf.net>
+
+	* include/_mingw.h (__int32, __int16, __int8, small, hyper): Define.
+	Note: Also added to w32api/include/basetyps.h.
+
 2003-06-18  Earnie Boyd  <earnie@users.sf.net>
 
 	* include/dirent.h (dirent): Make d_name and array instead of a pointer.
